Gray-Space/src/objects/MV_Actor__c.object
<CustomObject>
    <fields>
        <fullName>MV_Adult__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Adult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MV_Biography__c</fullName>
        <label>Biography</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MV_Birthday__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MV_Cast_Id__c</fullName>
        <label>Cast Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MV_Character__c</fullName>
        <label>Character</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_Credit_Id__c</fullName>
        <label>Credit Id</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_Deathday__c</fullName>
        <label>Deathday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MV_Gender__c</fullName>
        <label>Gender</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MV_Known_For_Department__c</fullName>
        <label>Known For Department</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MV_Original_Name__c</fullName>
        <label>Orginal Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_Popularity__c</fullName>
        <label>Popularity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MV_Profile_Path__c</fullName>
        <label>Profile Path</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MV_The_Movie_DB_ID__c</fullName>
        <externalId>true</externalId>
        <label>The Movie DB ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Actor</label>
    <nameField>
        <label>MV_Actor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>